--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -137,6 +137,10 @@ MALLOC_TRACE_LIBRARY = @MALLOC_TRACE_LIB_DIR_FLAG@ @MALLOC_TRACE_LIB_FLAG@
 ZOLTAN_INCLUDE = @INC_ZOLTAN_H@
 ZOLTAN_LIBRARY = @ZOLTAN_LIB_DIR_FLAG@ @ZOLTAN_LIB_FLAG@
 
+# TabProps
+TABPROPS_INCLUDE = @INC_TABPROPS_H@
+TABPROPS_LIBRARY = @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
+
 HAVE_BLAS      := @HAVE_BLAS@
 HAVE_CBLAS     := @HAVE_CBLAS@
 BLAS_LIBRARY   := @BLAS_LIB_DIR_FLAG@ @BLAS_LIB_FLAG@
@@ -232,7 +236,7 @@ PETSC_UNI_LIBRARY := @PETSC_UNI_LIB_DIR_FLAG@ @PETSC_UNI_LIB_FLAG@ @MPI_UNI_LIB_
 
 ELECTRIC_FENCE := @ELECTRIC_FENCE_LIB_DIR_FLAG@ @ELECTRIC_FENCE_LIB_FLAG@
 
-INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) ${MALLOC_TRACE_INCLUDE}
+INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) $(TABPROPS_INCLUDE) ${MALLOC_TRACE_INCLUDE}
 FINCLUDES += -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include
 
 BUILD_ICE=@BUILD_ICE@
