--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -138,8 +138,9 @@ ZOLTAN_INCLUDE = @INC_ZOLTAN_H@
 ZOLTAN_LIBRARY = @ZOLTAN_LIB_DIR_FLAG@ @ZOLTAN_LIB_FLAG@
 
 # TabProps
-TABPROPS_INCLUDE = @INC_TABPROPS_H@
-TABPROPS_LIBRARY = @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
+TABPROPS_INCLUDE =  @INC_TABPROPS_H@
+TABPROPS_LIBRARY =  @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
+HAVE_TABPROPS    := @HAVE_TABPROPS@
 
 HAVE_BLAS      := @HAVE_BLAS@
 HAVE_CBLAS     := @HAVE_CBLAS@
