--- a/configure.ac
+++ b/configure.ac
@@ -1018,6 +1018,49 @@ AC_SUBST(MALLOC_TRACE_LIB_FLAG)
 AC_SUBST(MALLOC_TRACE_LIB_DIR_FLAG)
 AC_SUBST(MALLOC_TRACE_LIB_MPI_FLAG)
 
+##  --  Check for 64 vs 80 bit floating point number storage in register precission error ------------------------
+
+# In other words, the processor may use 80 bit floating point number registers, and as long as the
+# data is kept on the processor (in registers) then you get extra precission... however, as soon as
+# the number is stored to memory, it is truncated back to fewer (64?) bits.  At this point, it is possible
+# for the original floating pointloatingpoint number to not compare with itself (ie, if the register data
+# happens to stay around, and the 'old' value is loaded back from memory and then compared to the register).
+# This can cause some very strange and hard to track down errors in the code.  To turn this off, gnu
+# provides the -ffloat-store compiler argument.
+
+if test "$DO_NOT_USE_FP_REGISTERS" == "TRUE"; then
+   AC_MSG_WARN( Disabling use of floating point registers with '-ffloat-store' compiler flag. )
+   CFLAGS="$CFLAGS -ffloat-store"
+   CXXFLAGS="$CXXFLAGS -ffloat-store"
+fi
+
+# WARNING: The following test case was created by Justin Luitjens.  It seems to work, and I can't 
+# come up with a better version, but I am not convinced that it will catch the problem in all cases...
+
+cat > conftest-fpr.cc <<EOF
+
+#include <iostream>
+
+int main()
+{
+  double a=1;
+  double b=.01;
+
+  int c=a/b;
+  return c != 100; // Shell return codes are backward in that 0 == success, thus the '!='.
+}
+EOF
+
+$CXX $CXXFLAGS conftest-fpr.cc -o conftest-fpr
+./conftest-fpr
+result=$?
+rm -f conftest-fpr conftest-fpr.cc
+if test $result != 0; then
+   AC_MSG_WARN( Floating point - usually 64 vs 80 bit - register precission problem detected. )
+   AC_MSG_WARN( To fix this problem - assuming you are using a gnu compiler - add the following to your configure line: )
+   AC_MSG_ERROR( DO_NOT_USE_FP_REGISTERS=TRUE )
+fi
+
 ##  --  search for Zoltan ------------------------
 
 if test "$with_zoltan"; then
@@ -1791,6 +1834,21 @@ if test "$with_visit"; then
       AC_MSG_ERROR( VisIt requires CMake. Please make sure 'cmake' is in your path!)
    fi
 
+   if test "$with_visit" == "yes"; then 
+      AC_MSG_ERROR( You must provide a DIRECTORY when using --with-visit=DIR. )
+   fi
+   if ! test -f "$with_visit/bin/xml2cmake"; then 
+      AC_MSG_ERROR( Could not find xml2cmake in $with_visit/bin/... )
+   fi
+
+   if test -f "./VisIt/udaReaderMTMD/Makefile.visit"; then
+      old_visit_dir=`grep TOPDIR ./VisIt/udaReaderMTMD/Makefile.visit`
+      if test "$old_visit_dir" != "TOPDIR=$with_visit/src"; then
+      	 AC_MSG_WARN(VisIt target directory has changed - removing old VisIt build directory...)
+	 rm -rf ./VisIt
+      fi
+   fi
+
    CMAKE_LOCATION=`which cmake`
 
    # Verify that cmake is new enough:
@@ -1811,21 +1869,6 @@ if test "$with_visit"; then
       AC_MSG_ERROR(CMake must be version 2.8 or better.  $CMAKE_LOCATION is version $CMAKE_VERSION_STRING.)
    elif test "$CMAKE_VERSION_MINOR" -lt 8; then
       AC_MSG_ERROR(CMake must be version 2.8 or better.  $CMAKE_LOCATION is version $CMAKE_VERSION_STRING.)
-   fi
-
-   if test "$with_visit" == "yes"; then 
-      AC_MSG_ERROR( You must provide a DIRECTORY when using --with-visit=DIR. )
-   fi
-   if ! test -f "$with_visit/bin/xml2cmake"; then 
-      AC_MSG_ERROR( Could not find xml2cmake in $with_visit/bin/... )
-   fi
-
-   if test -f "./VisIt/udaReaderMTMD/Makefile.visit"; then
-      old_visit_dir=`grep TOPDIR ./VisIt/udaReaderMTMD/Makefile.visit`
-      if test "$old_visit_dir" != "TOPDIR=$with_visit/src"; then
-      	 AC_MSG_WARN(VisIt target directory has changed - removing old VisIt build directory)
-	 rm -rf ./VisIt
-      fi
    fi
 
    sci_defs_files="$sci_defs_files VisIt/udaReaderMTMD/avtudaReaderMTMDFileFormat.C"
