--- a/R_Tester/helpers/build
+++ b/R_Tester/helpers/build
@@ -1,4 +1,12 @@
 #!/bin/sh
+#______________________________________________________________________
+# This script does the following:
+#   - create a configure_command file
+#   - execute the configure_command file
+#   - Compiles the code 
+#     If the code fails to compile the logs are created
+#   - Adds information to the web log
+#______________________________________________________________________
 
 export OS
 mode=$1 # dbg or opt
@@ -12,7 +20,7 @@ if [ "$OS" == "Linux" ]; then
   
   DBG_CONFIGURE="    --enable-debug \\
       --enable-64bit \\
-      --enable-sci-malloc \\ 
+      --enable-sci-malloc \\
       --enable-scinew-line-numbers \\"
   
   OPT_CONFIGURE="    --enable-64bit \\
@@ -25,7 +33,7 @@ if [ "$OS" == "Linux" ]; then
        --with-exprlib=/usr/local/home/jsutherland/UintahTPL \\
        --with-spatialops=/usr/local/home/jsutherland/UintahTPL \\
        --with-boost=/usr/local/share/wasatch/Boost-Install/1.44/gcc4.3.2 \\
-       USE_WASATCH=no \\"
+       USE_WASATCH=yes \\"
   
   ENV="      CC=gcc-4.2 \\
        CXX=g++-4.2 \\
@@ -120,6 +128,9 @@ if [ -d "${BUILD_DIR}/configure-${mode}.lock" ]; then
   rm "${BUILD_DIR}/configure-${mode}.lock"
 fi
 
+
+#__________________________________
+#  start compiling
 echo "Starting build on `date`:" >> $HTMLLOG
 
 cd "${BUILDROOT}/${mode}/build"
@@ -133,83 +144,46 @@ retval=$?
 if [ $retval != "0" ]; then
   # try it again -- it may not go all the way the first time
   echo "Failed first compile, try again"
-  $MAKE -k -j$MAKE_PARALLELISM >> ../make.log 2>&1
+  $MAKE -k -j$MAKE_PARALLELISM >> ../make2.log 2>&1
   retval=$?
 fi
 
 if [ $retval != "0" ]; then
   # try it again -- it may not go all the way the first time
   echo "Failed second compile, try again (storing make errors)"
-  $MAKE -k -j$MAKE_PARALLELISM > ../remake_with_fortran.log 2>&1
+  $MAKE -k -j$MAKE_PARALLELISM > ../make3.log 2>&1
   retval=$?
 fi
 
 if [ $retval != "0" ]; then
   # failed 3 times
-  if  [ -x "${BUILDROOT}/${mode}/build/StandAlone/sus" ]; then
-    # sus compiled alone
-    mv ../remake_with_fortran.log ../remake_failed_scirun.log
-    echo "*** Make failed, but sus was compiled successfully"
-    echo "A log of build errors can be found in"
-    echo "${BUILDROOT}/${mode}/remake_failed_scirun.log"
-    echo "A full log of trying to compile everything twice can be found in"
-    echo "${BUILDROOT}/${mode}/make.log"
-    echo ""
-  else
-    # No sus compiled -- try compiling without fortran - turn off Arches and Models/Radiation
-    # Use Todd's make target to turn off fortran"
-    echo "Failed third compile, try without fortran."
-
-    FILES="${BUILDROOT}/src/StandAlone/sub.mk" "${BUILDROOT}/src/CCA/Components/sub.mk" "${BUILDROOT}/src/CCA/Components/Dummy/sub.mk" "${BUILDROOT}/src/CCA/Components/Parent/sub.mk" "${BUILDROOT}/src/CCA/Components/Models/sub.mk" "${BUILDROOT}/src/CCA/Components/Models/ModelFactory.cc"
-
-    for file in $FILES; do cp $file $file.orig; done
-
-    $MAKE noFortran > ../remake_without_fortran.log 2>&1
-    cd "${BUILDROOT}/${mode}/build"
-    $MAKE -k -j$MAKE_PARALLELISM >> ../remake_without_fortran.log 2>&1
-    retval=$?
-
-    # Restore original files -- I keep forgetting when fortran is taken out
-    # and wondering why tests can't run after the problems been fixed.
-     for file in $FILES; do cp $file.orig $file; done
-
-    failed_sus=0
-    if [ $retval = "0" ]; then
-      echo "*** Make failed with FORTRAN, but passed without it."
-      echo ""
-      echo "Showing make errors with FORTRAN:" > ../make_results.log
-     WithArches="no"
-    elif  [ -x "${BUILDROOT}/${mode}/build/StandAlone/sus" ]; then
-      echo "*** Make failed, but sus was compiled successfully without FORTRAN"
-      echo ""
-      echo "Showing make errors with FORTRAN:" > ../make_results.log
-      WithArches="no"
-    else
-        echo "*** Make failed with code $retval"
-        echo ""
-        echo "Showing make errors:"  > ../make_results.log
-        failed_sus=1
-    fi
-    # show the compile errors (just the stuff it can't compile)
-    cat ../remake_with_fortran.log >> ../make_results.log
+  if  [ -x "${BUILDROOT}/${mode}/build/StandAlone/sus" && -x "${BUILDROOT}/${mode}/build/StandAlone/compare_uda"]; then
+    # sus compiled
+    echo "__________________________________"
+    echo "*** Make failed, but sus & compare_uda compiled successfully"
+    echo "  Build errors log:"
+    echo "    ${BUILDROOT}/${mode}/make3.log"
+    echo "  Full build log:"
+    echo "    ${BUILDROOT}/${mode}/make.log"
     echo ""
 
-    # Add compilation problems to webpage
+    # Add compilation errors to webpage
     cat ../make_results.log >> "$HTMLLOG"
 
-    # failed make, set a lock for this build
+    set a lock for this build
     if [ ! -d "${BUILD_DIR}/make-${mode}.lock" ]; then
       ln -s "$BUILDROOT" "${BUILD_DIR}/make-${mode}.lock"
     fi
-
-    if [ $failed_sus != "0" ]; then
-      exit 1
-    fi
+    
+  else  
+    #sus didn't compile
+    exit 1
   fi
 fi
 
+#__________________________________
+# compile successfully remove make lock
 if [ -d "${BUILD_DIR}/make-${mode}.lock" ]; then
-  # built successfully - remove old make lock 
   rm "${BUILD_DIR}/make-${mode}.lock"
 fi
 
