--- a/R_Tester/helpers/build
+++ b/R_Tester/helpers/build
@@ -31,10 +31,8 @@ if [ "$OS" == "Linux" ]; then
        --with-petsc=/usr/ \\
        --with-hypre=/usr/ \\
        --with-hdf5 \\
-       --with-tabprops=/usr/local/home/jsutherland/UintahTPL \\
-       --with-exprlib=/usr/local/home/jsutherland/UintahTPL \\
-       --with-spatialops=/usr/local/home/jsutherland/UintahTPL \\
        --with-boost=/usr/local/share/wasatch/Boost-Install/1.44/gcc4.3.2 \\
+       --enable-wasatch_3p \\
        USE_WASATCH=yes \\"
   
   ENV="      CC=gcc-4.2 \\
